# Advanced-Monte-Carlo-Markov-Chain-Financial-Simulation-System

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  bandit.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements-prod.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml  deployment_config.yaml  init.py  logging.yaml  model_params.yaml
data/benchmarks/: datasets.yaml
deployment/: docker-compose.dev.yml  docker-compose.prod.yml  init.sql  nginx.conf  prometheus.yml  supervisord.conf
deployment/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml
deployment/monitoring/: alert-rules.yml  grafana-dashboard.json
docker/: Dockerfile  docker-compose.yml  requirements-docker.txt
docs/: advanced-features.md  api.md  architecture.md  best-practices.md  getting-started.md  user-guide.md
docs/api/: index.html  monte_carlo.html  risk.html  visualization.html
examples/notebooks/: 01-basic-monte-carlo.ipynb
examples/scripts/: portfolio_optimization.py
migrations/: 001_initial_schema.sql  init.py
scripts/: backup_database.sh  download_market_data.py  health_check.py  performance_monitor.py  setup_dev_environment.sh
security/: security_scanner.py
src/: __init__.py  init.py  main.py
src/analytics_engine/: Risk_analytics.py  __init__.py  attribution_analytics.py  copula_models.py  init.py  performance_analytics.py  regime_detection.py  risk_analytics.py  risk_analytics01.py
src/api/: __init__.py  app.py  auth.py  health.py  init.py  main.py  middleware.py  rate_limiting.py  rest_api.py  websocket_api.py
src/api/routes/: analytics.py  portfolio.py  simulations.py
src/auth/: auth_manager.py
src/cache/: cache_manager.py
src/cli/: analysis_cli.py  init.py  main.py  simulation_cli.py
src/cloud_deployment/: deployment_automation.py
src/config/: settings.py
src/crypto_models/: crypto_market_engine.py
src/data/: __init__.py  connectors.py  processors.py
src/data_connectors/: base_connector.py  init.py  yahoo_finance.py
src/data_engine/: data_quality.py  data_validators.py  init.py
src/database/: database.py  models.py
src/distributed_computing/: distributed_engine.py
src/esg_integration/: esg_risk_engine.py
src/markov_engine/: continuous_markov.py  init.py  multi_dimensional_markov.py  regime_switching.py
src/markov_models/: hid_markov.py
src/ml_integration/: ensemble_methods.py  init.py  neural_surrogates.py  rl_optimizer.py
src/ml_models/: transformer_time_series.py
src/mobile_dashboard/: mobile_app.js
src/models/: base.py  init.py  simulation.py
src/monte_carlo_engine/: GBM_engine.py  Multi_asset.py  __init__.py  base_engine.py  gbm_engine.py  init.py  multi_asset.py  path_dependent.py  path_generators.py  quasi_monte_carlo.py  stochastic_processes.py  variance_reduction.py
src/optimization/: __init__.py  gpu_acceleration.py  init.py  memory_optimization.py  performance_profiler.py  portfolio_optimizer.py
src/quantum_monte_carlo/: quantum_engine.py
src/real_time_api/: options_pricing_api.py
src/real_time_engine/: Stream_processor.py  __init__.py  init.py  kalman_filters.py  real_time_analytics.py  stream_processor.py
src/regime_detection/: enhanced_regime_detector.py
src/stress_testing/: advanced_stress_engine.py
src/utils/: constants.py  exceptionS.py  exceptions.py  helpers.py  init.py  logging_config.py
src/validation/: backtesting.py  init.py  model_verification.py  statistical_validation.py
src/visualization/: dashboard.py  init.py  report_generator.py
tests/: test_api.py  test_integration.py  test_markov_models.py  test_performance.py  test_validation_framework.py
tests/load_testing/: locustfile.py
