[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monte-carlo-markov-finance"
version = "1.0.0"
description = "Comprehensive financial modeling framework with Monte Carlo and Markov models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MCMF Development Team", email = "dev@mcmf-system.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "plotly>=5.10.0",
    "streamlit>=1.15.0",
    "flask>=2.2.0",
    "sqlalchemy>=1.4.0",
    "redis>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-cov>=3.0.0",
    "black>=22.6.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.971",
]
gpu = [
    "cupy-cuda11x>=11.0.0; sys_platform != 'darwin'",
    "pyopencl>=2022.1",
]

[project.scripts]
mcmf = "cli.main:main"

[project.urls]
Homepage = "https://github.com/your-org/monte-carlo-markov-finance"
Documentation = "https://docs.mcmf-system.com"
Repository = "https://github.com/your-org/monte-carlo-markov-finance.git"
"Bug Tracker" = "https://github.com/your-org/monte-carlo-markov-finance/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mcmf"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "benchmark: marks tests as benchmarks",
]
